--- a/style.css
+++ b/style.css
@@ -1,31 +1,21 @@
-/* Tag selector to select the 'body' element */
-body {
-  background-color: 00b3e6;
- 
-  /* Your code here! */
-}
+  /* Your CSS code here */
+  body {
+    background-color: #00b3e6;
+  }
 
-/* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
-div {
-  font-family: Arial, Helvetica, sans-serif;
-  width: 700px;
-  margin: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  background: white;
-  padding: 30px;
-  /* Your code here! */
-}
+  div {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 700px;
+    margin: auto;
+    background: white;
+    padding: 30px;
+  }
 
-/* ID selector to select the element with id 'main-header' */
-#main-header {
-  /* Your code here! */
-  color: red;
-  font-size: 22px;
+  #main-header {
+    color: red;
+    font-size: 22px;
+  }
 
-}
-
-/* Class selector to select elements containing the class 'perspective-questions' */
-.perspective-questions {
-  font-style: italic;
-  /* Your code here! */
-}
+  .perspective-questions {
+    font-style: italic;
+  }
