--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   }
 
   div {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica Neue;
     width: 700px;
     margin: auto;
     background: white;
